2014-08-14  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/help/clippy/agent_out_of_limits.php,
	include/help/clippy/modules_not_init.php,
	include/functions_clippy.php,
	operation/agentes/estado_monitores.php,
	operation/agentes/estado_generalagente.php: wip in the clippy
	project.

2014-08-14  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/help/clippy/godmode_agentes_modificar_agente.php,
	include/help/clippy/homepage.php,
	include/help/clippy/godmode_agentes_configurar_agente.php: updated
	the text from the works of Carla. Thanks Carla.

2014-08-14  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_clippy.php,
	include/help/clippy/godmode_agentes_modificar_agente.php,
	include/help/clippy/homepage.php,
	include/help/clippy/module_unknow.php,
	include/help/clippy/godmode_agentes_configurar_agente.php,
	include/javascript/intro.js: some fixes and improves in the clippy.

2014-08-14  Koichiro Kikuchi <koichiro@rworks.jp>

	* pandora_console_install: Refactored code and added "fakeroot"
	 installation support.

2014-08-13  Junichi Satoh  <junichi@rworks.jp>

	* pandoradb.sql: Fixed sql error with MySQL 5.6 when NO_ZERO_DATE
	SQL mode is enabled.

2014-08-13  Junichi Satoh  <junichi@rworks.jp>

	* mobile/operation/events.php: Improved to show event comment.

2014-08-12  Miguel de Dios <miguel.dedios@artica.es>
	
	* index.php, operation/agentes/ver_agente.php,
	operation/agentes/estado_monitores.php, general/header.php,
	include/functions_clippy.php, include/functions_ui.php,
	include/help/en/help_context_module_unknow.php,
	include/help/clippy/module_unknow.php, include/styles/pandora.css,
	include/javascript/intro.js: added first version of context help
	interactive.

2014-08-12  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_modules.php: killed some unicorns and magic
	numbers into the function "modules_get_status".

2014-08-12  Miguel de Dios <miguel.dedios@artica.es>
	
	* images/clippy_icon.png, images/pandorin.png,